--- a/uber_haircuts/pubspec.yaml
+++ b/uber_haircuts/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_core: ^1.3.0
   firebase_auth: ^1.4.1
   cloud_firestore: ^1.0.3
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
