--- a/uber_haircuts/pubspec.yaml
+++ b/uber_haircuts/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_auth: ^1.4.1
   cloud_firestore: ^1.0.3
   provider: ^5.0.0
+  google_sign_in: ^4.4.4
 
 dev_dependencies:
   flutter_test:
