--- a/uber_haircuts/pubspec.yaml
+++ b/uber_haircuts/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   firebase_auth: ^1.4.1
   cloud_firestore: ^1.0.3
   provider: ^5.0.0
-  google_sign_in: ^4.4.4
+  google_sign_in: ^4.5.6
+  flutter_facebook_auth: ^1.0.0
+  flutter_twitter_login: ^1.1.0
 
 dev_dependencies:
   flutter_test:
