--- a/uber_haircuts/pubspec.yaml
+++ b/uber_haircuts/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_facebook_auth: ^1.0.0
   flutter_twitter_login: ^1.1.0
   geolocator: ^7.1.0
+  firebase_storage: ^8.1.3
 
 dev_dependencies:
   flutter_test:
