--- a/uber_haircuts/pubspec.yaml
+++ b/uber_haircuts/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   flutter_twitter_login: ^1.1.0
   geolocator: ^7.1.0
   firebase_storage: ^8.1.3
+  google_maps_flutter: ^2.0.6
+  location: ^4.2.0
+
 
 dev_dependencies:
   flutter_test:
