--- a/uber_haircuts/android/app/build.gradle
+++ b/uber_haircuts/android/app/build.gradle
@@ -64,6 +64,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
-
+    implementation 'com.firebase:geofire-android-common:3.1.0'
 
 }
