--- a/uber_haircuts/pubspec.yaml
+++ b/uber_haircuts/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_maps_flutter: ^2.0.6
   location: ^4.2.0
   uuid: 3.0.4
+  geoflutterfire: ^3.0.0-nullsafety.2
 
 
 dev_dependencies:
