Distance implemented in test.dart, now need to filter out when pulling in all parents

--- a/uber_haircuts/pubspec.yaml
+++ b/uber_haircuts/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   location: ^4.2.0
   uuid: 3.0.4
   geoflutterfire: ^3.0.0-nullsafety.2
+  flutter_geofire: ^2.0.0
 
 
 dev_dependencies:
