--- a/uber_haircuts/android/app/src/main/AndroidManifest.xml
+++ b/uber_haircuts/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:label="uber_haircuts"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyADHRmQGzWbsWIoebuHjFSuBPM77bIdvXs"/>
         <activity
