--- a/uber_haircuts/pubspec.yaml
+++ b/uber_haircuts/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   uuid: 3.0.4
   geoflutterfire: ^3.0.0-nullsafety.2
   flutter_launcher_icons: ^0.9.0
-
+  overlay_support: ^1.2.1
 
 
 dev_dependencies:
