--- a/uber_haircuts/pubspec.yaml
+++ b/uber_haircuts/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geoflutterfire: ^3.0.0-nullsafety.2
   flutter_launcher_icons: ^0.9.0
   overlay_support: ^1.2.1
+  image_picker: ^0.8.2
 
 
 dev_dependencies:
