--- a/uber_haircuts/pubspec.yaml
+++ b/uber_haircuts/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_launcher_icons: ^0.9.0
   overlay_support: ^1.2.1
   image_picker: ^0.8.2
+  geocoding: ^2.0.0
+  dart_geohash: ^2.0.1
 
 
 dev_dependencies:
